
	Added summary to builtin tree implementation.  Thanks to aleksejrs.

	Added 'title' option to control whether title of terminal should be set.
	Enabled by default if old title can be restored.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Case insensitive completion of autocommand name for :autocmd command.

	Allow /**/ in :autocmd pattern to match end of the path.  Thanks to
	aleksejrs.

	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.

	Fixed :autocmd being not whole line command (was terminated by |).  Thanks
	to aleksejrs.

	Fixed possible crash on writing vifminfo file on exiting.

	Fixed memory corruption on handlnig empty matches of searches in view
	mode.  Thanks to filterfalse.

	Fixed secondary column of very custom view (%U).  Thanks to filterfalse.

	Fixed reopening terminal for output, read-only mode somehow caused hangs.
	Thanks to aleksejrs.

	Fixed possible (effectively) hang on reading directory change events.

	Fixed parsing of commands which names are not followed by spaces with
	regard to pipe symbols (|).  Thanks to aleksejrs.

0.8 to 0.8.1-beta

	Turned remote commands back on by default after their rewrite using
	named pipes instead of insecure UDP sockets.

	Removed vifmrc-converter.  It's been around for four years and not needed
	any more.  Thanks to filterfalse.

	Removed contents of autoconf.sh, autoreconf covers what was there (there
	is a notice in that script now about it just in case).  Thanks to Hendrik
	Jaeger (a.k.a. henk).

	Changed 'fusehome' default from temporary directory to data directory (that
	is $XDG_DATA_HOME/.local/share/fuse/ or $VIFM/fuse/ depending on which
	parent directory exists, the second one exists by definition, but first
	might not).  Thanks to aleksejrs and to Hendrik Jaeger (a.k.a. henk).

	Added :winc[md] command-line command.  Thanks to fogine.

	Added layoutis() builtin function that answers queries about current
	interface configuration.  Thanks to fogine.
