@@ -11,6 +11,9 @@
 	Allow /**/ in :autocmd pattern to match end of the path.  Thanks to
 	aleksejrs.
 
+	Don't trigger DirEnter on exiting custom-view (when we technically stay in
+	the same directory).  Thanks to aleksejrs.
+
 	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.
 
 	Fixed :autocmd being not whole line command (was terminated by |).  Thanks
